public/stylesheets/style.css
/* ... */
.form-group{
  margin-top: 30px;
}

.form-control {
  font-size: 20px;
}

.form-review {
  display: none;
}

.form-review.active {
  display: inline;
}

/* login page css start here */

.header-header {
  background-color: var(--main-color);
  padding: 25px;
  color: black;
  font-size: bolder;
}

section {
  min-height: 80vh;
}

.col-all {
  margin: 5px;
  border: 1px solid var(--main-color);
}


#col-1{
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.login-context {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: flex-start;
  margin-left: 55px;
}

#logo-image{
  margin-top: 5px;
  margin-bottom: 20px;
}

section h2{
  margin-top: 5px;
  font-size: 55px;
}

.logo-log {
  margin-bottom: 25px;
}

.logo-log img {
  width: 200px;
}

.context {
  margin-left: 55px;
}

.context p {
  font-size: 25px;
  margin-top: 15px;
}

.btn-submit {
  margin-top: 1rem;
  display: inline-block;
  padding: 0.9rem 3rem;
  font-size: 1.7rem;
  color: black;
  background: var(--main-color);
  cursor: pointer;
  text-align: center;
  border-radius: 5px;
}

section #col-2 {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

section .create-h3{
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--main-color);
  box-shadow: 0px 5px 10px var(--main-color);
  color: black;
  border-radius: 10px;
  margin-bottom: 35px;
  font-size: 35px;
}

.user-signup {
  margin-bottom: 25px;
  padding: 10px 50px 10px 5px;
  font-size: 12px;
  border-radius: 5px;
  border: 3px solid #7d4505;
  font-weight: bold;
}

.user-input {
  margin-bottom: 25px;
  padding: 5px 10px 5px 20px;
  font-size: 15px;
  font-weight: bold;
  border-radius: 5px;
  border: 3px solid #7d4505;
}

form > div {
  margin-bottom: 2%;
}

/* this will put the textarea under the label */
form label {
  display: block;
}

.user {
  font-size: 20px;
}

.btn-signup {
  margin-top: 1rem;
  display: inline-block;
  padding: 0.6rem 2rem;
  font-size: 1.7rem;
  color: black;
  background: var(--main-color);
  cursor: pointer;
  text-align: center;
  border-radius: 5px;
}

/*media quary*/

@media (max-width: 991px) {
  html {
    font-size: 55%;
  }

  .header {
    padding: 1.5rem 2rem;
  }
}

@media (max-width: 768px) {
  #menu-btn {
    display: inline-block;
  }

  .header .navbar {
    position: absolute;
    top: 100%;
    right: -100%;
    background: white;
    width: 30rem;
    height: calc(100vh - 9.5rem);
    text-align: center;
  }

  .header .navbar.active {
    right: 0;
  }

  .header .navbar a {
    display: block;
    margin: 1.5rem;
    padding: 0.5rem;
    font-size: 2rem;
    color: black;
  }

  .header .search-form {
    width: 90%;
  }

  .home .content {
    align-items: center;
    text-align: center;
  }

  .home .content h3 {
    font-size: 4rem;
    text-transform: uppercase;
    color: white;
  }

  .home .content p {
    font-size: 2rem;
    font-weight: lighter;
    color: #eee;
    line-height: 1.8;
    padding: 2rem 0;
  }

  /*about*/
  .about .row .content .btn {
    width: 40%;
  }

  /*menu*/
  .menu .box-container {
    display: block;
  }
  /*products*/
  .Products .box-container {
    display: block;
  }
}

@media (max-width:550px){
html{
  font-size: 50%;
}

#col-1{
  width: 100%;
  margin-right: 20px;
  padding: 15px;
}

#col-2{
  width: 100%;
  margin-right: 20px;
  padding: 15px;
}



section .create-h3{
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--main-color);
  box-shadow: 0px 5px 10px var(--main-color);
  color: black;
  border-radius: 10px;
  margin-bottom: 35px;
  font-size: 25px;
}

}

